--- a/QuickLogin/build.gradle
+++ b/QuickLogin/build.gradle
@@ -31,6 +31,7 @@ android {
 
 dependencies {
 
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
